Support of Apache 2.2 and 2.4

--- a/conf/apache2-scripts.conf
+++ b/conf/apache2-scripts.conf
@@ -1,2 +1,11 @@
-# Use sites-enabled for vhosts insted conf.d
-IncludeOptional sites-enabled/*
+# Use sites-enabled for vhosts instead of conf.d
+
+# Apache 2.4
+<IfModule mod_authz_core.c>
+    IncludeOptional sites-enabled/*
+</IfModule>
+
+# Apache 2.2
+<IfModule !mod_authz_core.c>
+    Include sites-enabled/*
+</IfModule>
